--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-cayman
-testing!
+title: TridentMaple's site is under construction!
+description: I hope to have art up here soon.
